--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,10 @@ table>tr>td{
     font-family: 'Barbedor T';
     color: red
 }
+.emaanlogoquote{
+    font-style: italic;
+    font-family: Monotype Corsiva;
+    color: darkblue;
+    margin-top: 0px;
+    padding-top: 0px;
+}
