--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 /*Body*/
 body{
 
-    background-image: url(http://hdimagesnew.com/wp-content/uploads/2015/11/White-Texture-HD-Backgrounds-6.jpg);
+    /*background-image: url(http://hdimagesnew.com/wp-content/uploads/2015/11/White-Texture-HD-Backgrounds-6.jpg);*/
     height: 100%;
 }
 table>tr>td{
@@ -25,8 +25,7 @@ table>tr>td{
 }
 .jumbotron h1{
     font-family: 'Carter One' !important;
-    color: white; !important;
-
+    color: white !important;
 }
 /*Jumbotron style*/
 
@@ -88,3 +87,152 @@ hr{
 .about h2, .admission-content h2{
     font-family: "Times New Roman" !important;
 }
+
+
+/*Contact us*/
+.mail h2,.events h2,.services h2,h2.title,.gallery h2{
+	font-size:32px;
+    color: #2e6da4;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 1em;
+    border-bottom:1px solid #DCDCDC;
+    width: 35%;
+	position:relative;
+}
+.mail h2:after,.events h2:after,.services h2:after,h2.title:after,.gallery h2:after{
+	content: '';
+    width: 40%;
+    background: #45A3D6;
+    height: 3px;
+    position: absolute;
+    bottom: 0;
+    left: 31%;
+}
+.mail h2 span{
+	display: block;
+    color: #000;
+    font-size: 32px;
+    margin: 0 0 0.5em;
+    font-style: italic;
+    font-family: 'Cabin', sans-serif;
+}
+.mail-grids{
+	margin:3em 0 5em;
+}
+.mail-grid-left{
+	background:#f5f5f5;
+	min-height:100px;
+	position:relative;
+	border-right:1px dotted #999;
+}
+.mail-grid-left-pos{
+	position: absolute;
+    top: 25%;
+    right: -30%;
+    width: 58%;
+    height: 50%;
+    background: #45A3D6;
+    border-radius:  100%;
+}
+.mail-grid-left-pos span{
+	color: #fff;
+    font-size: 1em;
+    top: 1.1em;
+    left: .9em;
+}
+.mail-grid1{
+	border:1px dotted #337ab7;
+}
+.mail-grid-right1{
+	padding:1.6em 1em 0em 2em;
+}
+.mail-grid-right1 h3,.mail-grid-right p{
+	font-size:22px;
+	color:#337ab7;
+	margin:0;
+	line-height:1.5em;
+	font-family: 'Cabin', sans-serif;
+}
+.mail-grid-right1 h3 i{
+	color:#000;
+}
+.mail-grid-right p a span,.mail-grid-right p span{
+	display:block;
+}
+.mail-grid-right p a{
+	text-decoration:none;
+	color:#337ab7;
+}
+.mail-grid-right p a:hover{
+	color:#000;
+}
+.map-grid h3{
+	font-size:32px;
+	color:#000;
+	margin:0 0 2em;
+}
+.map-grid h3 span{
+	color:#45A3D6;
+}
+.map-grid iframe{
+	width:100%;
+	min-height:400px;
+}
+.map-grid input[type="text"],.map-grid input[type="email"],.map-grid textarea{
+	outline: none;
+    border: 1px solid #E6E6E6;
+    background: #F1F1F1;
+    color: #999;
+    font-size: 14px;
+    width: 48.3%;
+    padding: 10px;
+}
+.map-grid input[type="text"]:nth-child(3){
+	width:100%;
+	margin:1em 0;
+}
+.map-grid input[type="email"]{
+	margin-left:1em;
+}
+.map-grid textarea{
+	resize:none;
+	min-height:200px;
+	width:100% !important;
+	margin-bottom:.8em;
+}
+.map-grid input[type="submit"]{
+	outline:none;
+	border:none;
+	background:#FF5A56;
+	color:#fff;
+	font-size:1em;
+	width:30%;
+	padding:10px 0;
+	transition: 0.5s all ease;
+    -webkit-transition: 0.5s all ease;
+    -moz-transition: 0.5s all ease;
+    -o-transition: 0.5s all ease;
+    -ms-transition: 0.5s all ease;
+}
+.map-grid input[type="submit"]:hover{
+	background:#45A3D6;
+}
+/*-- //mail --*/
+
+/*index*/
+.banner-bottom-grid h3,.services-grid-right h3{
+	font-size: 22px;
+    color: #FF5A56;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid #D9D9D9;
+    margin: 0;
+    line-height: 1.5em;
+	position:relative;
+    font-family: 'Peralta', cursive;
+    font-weight: 100;
+}
+.banner-bottom-grid h3 span,.services-grid-right h3 span{
+	color:#45a3d6;
+}
+/*index*/
